# SmallTool

./: .gitignore  README.md  api.py  index.html  main.py  main.spec  package-lock.json  package.json  pyproject.toml  vite.config.js
command/: api.py  windows_api.py
src/: App.vue  main.js
src/components/: ParamPanda.vue
src/views/: cliRun.vue  libraryManager.vue
