[project]
name = "small"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dust-utils",
    "pyinstaller>=6.18.0",
    "pywebview>=6.1",
    "screeninfo>=0.8.1",
]

[tool.uv.sources]
dust-utils = { path = "../dust_utils", editable = true }
